--- a/src/app/components/setting/profile/profile.component.html
+++ b/src/app/components/setting/profile/profile.component.html
@@ -21,7 +21,7 @@
                         </div>
                     </div>
                     <hr>
-                    <div class="project-status">
+                    <!-- <div class="project-status">
                         <h5 class="f-w-600">Employee Status</h5>
                         <div class="media">
                             <div class="media-body">
@@ -50,7 +50,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
