--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -48,21 +48,12 @@
                     </ul>
                 </li>
                 <li class="onhover-dropdown">
-                    <span class="badge badge-pill badge-primary pull-right notification-badge">3</span>
+                    <span class="badge badge-pill badge-primary pull-right notification-badge">1</span>
                     <app-feather-icons [icon]="'bell'"></app-feather-icons><span class="dot"></span>
                     <ul class="notification-dropdown onhover-show-div">
-                        <li>Notification <span class="badge badge-pill badge-primary pull-right">3</span></li>
+                        <li>Notification <span class="badge badge-pill badge-primary pull-right">1</span></li>
                         <li>
-                            <div class="media">
-                                <div class="media-body">
-                                    <h6 class="mt-0"><span>
-                                            <app-feather-icons class="shopping-color" [icon]="'shopping-bag'">
-                                            </app-feather-icons>
-                                        </span>Your order ready for Ship..!
-                                    </h6>
-                                    <p class="mb-0">Lorem ipsum dolor sit amet, consectetuer.</p>
-                                </div>
-                            </div>
+                        
                         </li>
                         <li>
                             <div class="media">
@@ -76,7 +67,7 @@
                             </div>
                         </li>
                         <li>
-                            <div class="media">
+                            <!-- <div class="media">
                                 <div class="media-body">
                                     <h6 class="mt-0 txt-danger"><span>
                                             <app-feather-icons class="alert-color font-danger" [icon]="'alert-circle'">
@@ -84,7 +75,7 @@
                                         </span>250 MB trash files</h6>
                                     <p class="mb-0">Lorem ipsum dolor sit amet, consectetuer.</p>
                                 </div>
-                            </div>
+                            </div> -->
                         </li>
                         <li class="txt-dark"><a href="javascript:void(0)">All</a> notification</li>
                     </ul>
