--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -219,6 +219,6 @@
     <span>{{ currentPage }}</span>
     <button (click)="nextPage()">Next</button>
   </div>
- 
+  <button (click)="downloadPDF()">Download as PDF</button>
 </body>
 </html>
