--- a/src/app/components/setting/profile/profile.component.html
+++ b/src/app/components/setting/profile/profile.component.html
@@ -346,9 +346,9 @@
           <h5>You have a high or critical vulnerability that requires immediate action.</h5>
         </div>
         <ul>
-          <li>A</li>
-          <li>B</li>
-          <li>C</li>
+          <li>1. Apply strict input validation and sanitization to user inputs.</li>
+          <li>2. Implement rate limiting for incoming requests. </li>
+          <li>3. Use cryptographic signatures and certificates</li>
         </ul>
       </div>
 
